<resources>
    <string name="app_name">有品漫画</string>
    <string name="browse_terminal_warning">已经到头了...</string>
    <string name="browse_harding_loading">正在努力加载...</string>
    <string name="text_save">保存</string>
    <string name="text_share">分享</string>
    <string name="shared_2_save_album">保存到相册</string>
    <string name="shared_2_save_album_success">已保存到%s</string>
    <string name="shared_2_save_album_start_save">正在保存...</string>
    <string name="shared_2_save_album_failed">保存失败!</string>


    <!-- 用户登录 -->
    <string name="user_login_account_login">登录</string>
    <string name="user_login_account_regist">注册</string>
    <string name="user_login_account_forget">确认修改</string>
    <string name="user_login_entrance">进入有品漫画</string>
    <string name="user_login_account_hint">请输入手机号</string>
    <string name="user_login_pwd_hint">请输入密码</string>
    <string name="regist_hint_verification">请输入验证码</string>
    <string name="get_hint_verification">获取验证码</string>
    <string name="user_set_login_pwd_hint">设置密码,6-20位字符</string>
    <string name="user_login_bottom_text">第三方登陆</string>
    <string name="user_login_bottom_text_two">翅膀APP授权登录></string>
    <string name="login_inputer_userinfo">请正确输入用户信息！</string>
    <string name="login_hand_input">手动输入</string>
    <string name="login_recommand_same_name">推荐相似名称</string>
    <string name="login_username_repeat">用户名重复</string>
    <string name="login_failed_check_account">登录失败,请检查您的帐户信息!</string>
    <string name="txt_forgot_pwd">忘记密码</string>
    <string name="login_login_confirm_logout">确定要退出登录吗?</string>
    <string name="more_logout_waring">已安全退出!</string>


    <!-- 分享部分 -->
    <string name="errcode_shared_to">分享到</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_logging">登录中,请稍候...</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>


    <!-- 更多(关于我们) -->
    <string name="more_abut_share_text">我正在使用动漫之家手机客户端看漫画，最全的漫画内容、最及时的漫画更新，你也下载一个看看吧!</string>
    <string name="more_abut_share_title">最全的漫画内容、最及时的漫画更新</string>
    <string name="share_default_text">我正在使用动漫之家手机客户端看漫画，最全的漫画内容、最及时的漫画更新，你也下载一个看看吧！http://www.dmzj.com</string>


    <!-- 漫研首页-->
    <string name="main_edit_recommend">编辑力荐</string>



    <!-- 通用部分 -->
    <string name="txt_back">返回</string>
    <string name="txt_opration">操作</string>
    <string name="txt_exit">退出登录</string>
    <string name="txt_login">登录/注册</string>
    <string name="txt_net_invalid">无网络连接!</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_save">保存</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_warning">提示!</string>
    <string name="txt_opration_failed">操作失败</string>
    <string name="txt_save_success">保存成功</string>
    <string name="txt_processing">处理中...</string>
    <string name="index_hint">再按一次退出程序</string>
    <string name="message_hint">输入文本...</string>
    <string name="warning_synerror">数据同步失败</string>
    <string name="app_welcome">Copyright © dmzj.com , All Rights Reserved</string>
    <string name="reuqest_data_failed">没有获取到内容</string>
    <string name="reuqest_no_more_data">没有数据啦~~</string>



    <!-- 搜索 -->
    <string name="search_inputer_hint">漫画、文章、漫评、新闻、用户</string>
    <string name="search_search_history">搜索历史</string>
    <string name="search_hot_search">热门搜索</string>
    <string name="search_search_noresult_top">没有搜索到想看的作品？</string>
    <string name="search_search_noresult_bot">去有品漫画网页版搜索，说不定有惊喜哦\n登录并善用有品漫画网站与软件\n就有机会阅读更多优秀作品</string>
    <string name="search_clear_record">清空记录</string>
    <string name="search_latest">最新：</string>
    <string name="search_contains_special_charactor">包含不可搜索字符!</string>


    <!-- 读漫-->
    <string name="fragment_discover">发现</string>
    <string name="fragment_book_rack">书架</string>
    <string name="fragment_hot_serialize">热门连载</string>
    <string name="fragment_hot_refresh">换一换</string>
    <string name="fragment_finish_read">完本阅读</string>
    <string name="fragment_guess_like">猜你喜欢</string>
    <string name="fragment_new_cartoon">新漫导读</string>
    <string name="fragment_more">更多></string>
</resources>
