<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/comm_ui_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_titlebar_hei"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:onClick="onAction"
            android:text="@string/txt_cancel"
            android:textColor="@color/comm_blue_high"
            android:textSize="@dimen/txt_size_second" />

        <EditText
            android:id="@+id/edit_search_inputer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/action"
            android:background="@drawable/search_barbac"
            android:drawableLeft="@drawable/img_magnifier"
            android:drawablePadding="5dp"
            android:hint="@string/search_inputer_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLength="80"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/comm_gray_high"
            android:textColorHint="@color/comm_gray_mid"
            android:textSize="@dimen/txt_size_second" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_common_title_bottom_line_h"
            android:layout_alignParentBottom="true"
            android:background="@drawable/common_navi_line" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="33dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/search_hot_search"
                        android:textColor="@color/comm_gray_high" />

                </RelativeLayout>

                <com.youpin.comic.publicviews.FlowLayout
                    android:id="@+id/layout_autowrap"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:horizontalSpacing="8dip"
                    app:verticalSpacing="8dip">

                </com.youpin.comic.publicviews.FlowLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/comm_gray_low" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="33dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/search_search_history"
                        android:textColor="@color/comm_gray_high" />


                    <TextView
                        android:id="@+id/txtbtn_clearhistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:includeFontPadding="@+id/txtbtn_clearhistory"
                        android:text="@string/search_clear_record"
                        android:textColor="@color/color_selector_comm_gray_high" />


                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layout_search_historys"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"></LinearLayout>

                <include layout="@layout/scrollview_bottom_spaceholder" />
            </LinearLayout>
        </ScrollView>

        <!-- 漫画简短介绍层 -->

        <LinearLayout
            android:id="@+id/layout_brife"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/comm_ui_background"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/list_brief"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:divider="@color/comm_gray_low"
                android:dividerHeight="1px"
                android:listSelector="@drawable/common_white_gray_low_selector"></ListView>
        </LinearLayout>

        <!-- 漫画列表层 -->


        <com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_introductions"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/comm_ui_background"
            android:visibility="gone">

            <ListView
                android:id="@+id/list_introductions"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/layout_title"
                android:cacheColorHint="#00000000"
                android:choiceMode="singleChoice"
                android:divider="@null"
                android:fadingEdge="none"
                android:fastScrollEnabled="false"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:listSelector="@android:color/transparent"
                android:scrollbarStyle="outsideOverlay"
                android:smoothScrollbar="true" />

            <LinearLayout
                android:id="@+id/txt_search_warning"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/search_search_noresult_top"
                    android:textColor="@color/comm_gray_high"
                    android:textSize="@dimen/txt_size_first" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/search_search_noresult_bot"
                    android:textColor="@color/comm_gray_low"
                    android:textSize="@dimen/txt_size_second" />
            </LinearLayout>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </RelativeLayout>

</LinearLayout>